// SPDX-License-Identifier: AGPL-3.0-only
// Provenance-includes-location: https://github.com/cortexproject/cortex/blob/master/pkg/alertmanager/alertspb/alerts.proto
// Provenance-includes-license: Apache-2.0
// Provenance-includes-copyright: The Cortex Authors.

syntax = "proto3";

package alerts;

import "github.com/prometheus/alertmanager/cluster/clusterpb/cluster.proto";

option go_package = "github.com/grafana/mimir/pkg/alertmanager/alertspb";

message AlertConfigDesc {
    string user = 1;
    string raw_config = 2;

    repeated TemplateDesc templates = 3;
}

message TemplateDesc {
    string filename = 1;
    string body = 2;
}

message FullStateDesc {
  clusterpb.FullState state = 1;
}

message GrafanaAlertConfigDesc {
  string user = 1;
  string raw_config = 2;
  reserved 3; // id, not used
  string hash = 4;
  int64 created_at_timestamp = 5;
  bool default = 7;
  bool promoted = 8;
  string external_url = 9;
  map<string, string> static_headers = 10;
}
